// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col /> renders with custom styles when given a custom theme 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 16px;
  padding-left: 16px;
  -webkit-flex: 1 0 100%;
  -ms-flex: 1 0 100%;
  flex: 1 0 100%;
  max-width: 100%;
}

@media (min-width:600px) {
  .emotion-0 {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    max-width: 50%;
  }
}

@media (min-width:960px) {
  .emotion-0 {
    -webkit-flex: 1 0 33.333333%;
    -ms-flex: 1 0 33.333333%;
    flex: 1 0 33.333333%;
    max-width: 33.333333%;
  }
}

@media (min-width:1280px) {
  .emotion-0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
    max-width: 25%;
  }
}

@media (min-width:1920px) {
  .emotion-0 {
    -webkit-flex: 1 0 8.333333%;
    -ms-flex: 1 0 8.333333%;
    flex: 1 0 8.333333%;
    max-width: 8.333333%;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`<Col /> renders with default styles 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
}

<div
  className="emotion-0"
/>
`;

exports[`<Col /> renders with no gutters when given a prop 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
}

<div
  className="emotion-0"
/>
`;

exports[`<Col /> renders with offset styles when given a prop 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-left: 16.666667%;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
}

@media (min-width:576px) {
  .emotion-0 {
    margin-left: 50%;
  }
}

@media (min-width:768px) {
  .emotion-0 {
    margin-left: 33.333333%;
  }
}

@media (min-width:992px) {
  .emotion-0 {
    margin-left: 25%;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    margin-left: 8.333333%;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`<Col /> renders with order styles when given a prop 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
  max-width: 100%;
  -webkit-order: 13;
  -ms-flex-order: 13;
  order: 13;
}

@media (min-width:576px) {
  .emotion-0 {
    -webkit-order: 6;
    -ms-flex-order: 6;
    order: 6;
  }
}

@media (min-width:768px) {
  .emotion-0 {
    -webkit-order: 4;
    -ms-flex-order: 4;
    order: 4;
  }
}

@media (min-width:992px) {
  .emotion-0 {
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    -webkit-order: -1;
    -ms-flex-order: -1;
    order: -1;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`<Col /> renders with responsive styles 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  -webkit-flex: 1 0 100%;
  -ms-flex: 1 0 100%;
  flex: 1 0 100%;
  max-width: 100%;
}

@media (min-width:576px) {
  .emotion-0 {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    max-width: 50%;
  }
}

@media (min-width:768px) {
  .emotion-0 {
    -webkit-flex: 1 0 33.333333%;
    -ms-flex: 1 0 33.333333%;
    flex: 1 0 33.333333%;
    max-width: 33.333333%;
  }
}

@media (min-width:992px) {
  .emotion-0 {
    -webkit-flex: 1 0 25%;
    -ms-flex: 1 0 25%;
    flex: 1 0 25%;
    max-width: 25%;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    -webkit-flex: 1 0 8.333333%;
    -ms-flex: 1 0 8.333333%;
    flex: 1 0 8.333333%;
    max-width: 8.333333%;
  }
}

<div
  className="emotion-0"
/>
`;
